deployments/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/deploying-and-monitoring-an-auction-and-sock-webapp-through-a-cicd-pipeline-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
          image: app
          name: app
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
